# writing-anima

./: .gitignore  README.md  TODO.md  check.sh
.github/workflows/: build-app.yml
backend/: .gitignore  README.md  config.yaml  config.yaml.old  desktop.py  main.py  pyproject.toml  requirements.txt  setup.py  watchdog.py
backend/src/: config.py  global_init.py  resources.py
backend/src/agent/: base.py  deepseek_agent.py  factory.py  moonshot_agent.py  openai_agent.py  tools.py
backend/src/agent/prompts/: writing_critic.txt
backend/src/api/: __init__.py  analysis.py  animas.py  models.py  personas.py  projects.py  settings.py
backend/src/corpus/: claude_parser.py  ingest.py  mbox_parser.py  pdf_extractor.py  style_pack.py  update.py
backend/src/corpus/embed/: base.py  factory.py  mlx.py  openai.py
backend/src/database/: vector_db.py
backend/src/database/general/: __init__.py
backend/src/database/settings/: __init__.py
backend/src/database/vector/: __init__.py  schema.py
backend/tests/: test_settings_api.py
frontend/: .env.example  .env.production  .gitignore  animas.html  error.html  eslint.config.mjs  index.html  package-lock.json  package.json  project.html  project_settings.html  settings.html  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.js  App.tsx  animas.tsx  apiTypes.ts  index.css  index.tsx  project.tsx  project_settings.tsx  settings.tsx  types.ts
frontend/src/components/AgentCustomization/: UnifiedAgentCustomizationPanel.jsx  UnifiedAgentCustomizationPanel.tsx
frontend/src/components/AnimaChat/: AnimaChat.jsx  AnimaChat.tsx
frontend/src/components/AnimaManager/: AnimaManager.tsx  CorpusUploadModal.tsx  CreateAnimaModal.tsx
frontend/src/components/CorpusGroundsViewer/: CorpusGroundsViewer.jsx  CorpusGroundsViewer.tsx
frontend/src/components/FeedbackPanel/: CriticCard.tsx  FeedbackPanel.tsx  index.ts
frontend/src/components/PersonaManager/: CorpusUploadModal.jsx  CorpusUploadModal.tsx  CreatePersonaModal.tsx  PersonaManager.jsx  PersonaManager.tsx
frontend/src/components/ProjectSettings/: ProjectSettings.tsx
frontend/src/components/Projects/: ProjectDashboard.jsx  ProjectDashboard.tsx
frontend/src/components/PurposeStep/: PurposeStep.tsx
frontend/src/components/Settings/: Settings.tsx
frontend/src/components/ThoughtProcess/: ThoughtProcess.tsx
frontend/src/components/UI/: DropdownSelect.tsx  ProgressIndicator.tsx  SystemStatusIndicator.tsx  UserPreferencesPanel.tsx
frontend/src/components/WritingArea/: WritingArea.tsx  index.ts
frontend/src/components/WritingInterface/: WritingInterface.jsx  WritingInterface.tsx  index.ts
frontend/src/config/: firebase.ts
frontend/src/services/: animaService.js  animaService.ts  desktopApi.ts  feedbackHistoryService.ts  projectService.js  projectService.ts  settingsService.ts  userAgentService.ts  websocketStream.ts
icon/Media.xcassets/AppIcon.appiconset/: Contents.json
icon/icon.icon/: icon.json
