[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.109.0",
    "huggingface-hub>=1.5.0",
    "mlx-embeddings>=0.0.5",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "pypdf>=4.0.0",
    "pywebview>=6.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "qdrant-client>=1.7.0",
    "sqlmodel>=0.0.37",
    "tqdm>=4.66.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
writing-anima = "desktop:main"

[tool.hatch.build.targets.wheel]
include = [
    "desktop.py",
    "main.py",
    "src/",
]
force-include = {"../frontend/dist" = "frontend/dist"}

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.scripts]
dist = "bash -c 'cd ../frontend && npm install && npm run build && cd ../backend && rm -rf ~/Library/Application\\ Support/pyapp/backend ~/Library/Caches/pyapp && hatch build -t wheel && PYAPP_PROJECT_PATH=$(realpath $(ls dist/backend-*.whl | tail -1)) hatch build -t binary'"

[tool.hatch.envs.dev]
installer = "uv"
dependencies = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.binary]
scripts = ["writing-anima"]

[tool.mypy]
plugins = ['pydantic.mypy']
strict = true

[[tool.mypy.overrides]]
module = ["mlx_embeddings.*"]
follow_untyped_imports = true
